Got the atlas structures with the same center of mass

--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -14,7 +14,11 @@
     "import pyvista as pv\n",
     "from skimage.filters import gaussian\n",
     "from scipy.ndimage import zoom, center_of_mass, shift, affine_transform\n",
+    "from scipy.spatial import procrustes\n",
+    "from scipy.spatial.transform import Rotation as R\n",
     "import cv2\n",
+    "\n",
+    "import SimpleITK as sitk\n",
     "\n",
     "import ipywidgets\n",
     "from pathlib import Path\n",
@@ -150,7 +154,273 @@
     "        pt = (1 - t) * contour[j] + t * contour[j + 1]\n",
     "        vertices.append(tuple(pt.astype(int)))\n",
     "\n",
-    "    return vertices"
+    "    return vertices\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4355938a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resample_image(image, reference_image):\n",
+    "    \"\"\"\n",
+    "    Resamples an image to match the reference image in size, spacing, and direction.\n",
+    "    \"\"\"\n",
+    "    resampler = sitk.ResampleImageFilter()\n",
+    "    resampler.SetReferenceImage(reference_image)\n",
+    "    resampler.SetInterpolator(sitk.sitkLinear)  # Linear interpolation for resampling\n",
+    "    resampler.SetDefaultPixelValue(0)  # Fill with zero if needed\n",
+    "    resultImage = resampler.Execute(image)\n",
+    "    #return sitk.GetArrayFromImage(resultImage)\n",
+    "    return resultImage\n",
+    "\n",
+    "def center_images_to_largest_volume(images):\n",
+    "    \"\"\"\n",
+    "    Centers a list of 3D SimpleITK images using the largest-volume image as the reference.\n",
+    "\n",
+    "    Parameters:\n",
+    "        images (List[sitk.Image]): List of 3D SimpleITK Image objects.\n",
+    "\n",
+    "    Returns:\n",
+    "        List[sitk.Image]: List of centered images (same order as input).\n",
+    "    \"\"\"\n",
+    "    if not images:\n",
+    "        raise ValueError(\"No images provided.\")\n",
+    "\n",
+    "    # Compute volumes and find reference image\n",
+    "    volumes = [img.GetSize()[0] * img.GetSize()[1] * img.GetSize()[2] * \n",
+    "               img.GetSpacing()[0] * img.GetSpacing()[1] * img.GetSpacing()[2] for img in images]\n",
+    "    reference_index = volumes.index(max(volumes))\n",
+    "    reference_image = images[reference_index]\n",
+    "\n",
+    "    \"\"\"\n",
+    "    ref_center = sitk.PhysicalPointSource(reference_image.GetPixelID(), reference_image.GetSize(), reference_image.GetOrigin(),\n",
+    "                                          reference_image.GetSpacing(), reference_image.GetDirection())\n",
+    "    ref_center = sitk.CenteredTransformInitializer(reference_image, reference_image,\n",
+    "                                                   sitk.Euler3DTransform(), \n",
+    "                                                   sitk.CenteredTransformInitializerFilter.MOMENTS).GetTranslation()\n",
+    "\n",
+    "    \"\"\"\n",
+    "    centered_images = []\n",
+    "    for i, img in enumerate(images):\n",
+    "        if i == reference_index:\n",
+    "            centered_images.append(img)\n",
+    "            continue\n",
+    "\n",
+    "        # Calculate center transform\n",
+    "        transform = sitk.CenteredTransformInitializer(reference_image, img,\n",
+    "                                                      sitk.Euler3DTransform(), \n",
+    "                                                      sitk.CenteredTransformInitializerFilter.MOMENTS)\n",
+    "\n",
+    "        # Resample image\n",
+    "        resampled = sitk.Resample(img,\n",
+    "                                  reference_image,\n",
+    "                                  transform,\n",
+    "                                  sitk.sitkLinear,\n",
+    "                                  0.0,\n",
+    "                                  img.GetPixelID())\n",
+    "\n",
+    "        centered_images.append(resampled)\n",
+    "\n",
+    "    return centered_images\n",
+    "\n",
+    "\n",
+    "def load_volumes(structure):\n",
+    "    images = []\n",
+    "\n",
+    "    brains = ['MD585', 'MD589', 'MD594']\n",
+    "    for brain in brains:\n",
+    "        structure_path = os.path.join(data_path, brain, 'structure', f'{structure}.npy')\n",
+    "        arr = np.load(structure_path)\n",
+    "        arr = arr.astype(np.float32)\n",
+    "        print(arr.dtype, arr.shape)\n",
+    "        arr = sitk.GetImageFromArray(arr, isVector=False)\n",
+    "        images.append(arr)\n",
+    "\n",
+    "    reference_image = max(images, key=lambda img: np.prod(img.GetSize()))\n",
+    "    resampled_images = [resample_image(img, reference_image) for img in images]\n",
+    "    \n",
+    "    resampled_images = center_images_to_largest_volume(resampled_images)\n",
+    "    \n",
+    "    return resampled_images, reference_image\n",
+    "        #return [sitk.ReadImage(p, sitk.sitkFloat32) for p in volume_paths]\n",
+    "\n",
+    "\n",
+    "    \n",
+    "def build_unbiased_atlas(images, num_iterations=5):\n",
+    "    \"\"\"\n",
+    "    Perform groupwise rigid registration and build an unbiased mean image (atlas).\n",
+    "\n",
+    "    Parameters:\n",
+    "        images (list of sitk.Image): List of 3D images to register.\n",
+    "        num_iterations (int): Number of iterations for atlas building.\n",
+    "\n",
+    "    Returns:\n",
+    "        mean_image (sitk.Image): The final unbiased average image.\n",
+    "        registered_images (list of sitk.Image): List of registered images.\n",
+    "    \"\"\"\n",
+    "    # Step 1: Initialize the mean image as a simple average (first guess)\n",
+    "    #mean_image = sitk.Mean(images)\n",
+    "    np_images = [sitk.GetArrayFromImage(img) for img in images]\n",
+    "    mean_image = np.mean(np_images, axis=0)\n",
+    "    mean_image = sitk.GetImageFromArray(mean_image)\n",
+    "    for iteration in range(num_iterations):\n",
+    "        print(f\"Iteration {iteration + 1}/{num_iterations}\")\n",
+    "\n",
+    "        transforms = []\n",
+    "\n",
+    "        for img in images:\n",
+    "            # Rigid registration\n",
+    "            registration_method = sitk.ImageRegistrationMethod()\n",
+    "            registration_method.SetMetricAsMattesMutualInformation(numberOfHistogramBins=50)\n",
+    "            registration_method.SetOptimizerAsGradientDescent(learningRate=1.0, numberOfIterations=100,\n",
+    "                                                              convergenceMinimumValue=1e-6, convergenceWindowSize=10)\n",
+    "            registration_method.SetInterpolator(sitk.sitkLinear)\n",
+    "            registration_method.SetMetricSamplingPercentage(0.1, sitk.sitkWallClock)\n",
+    "            registration_method.SetMetricSamplingStrategy(registration_method.RANDOM)\n",
+    "\n",
+    "            # Rigid transformation only\n",
+    "            tx = sitk.CenteredTransformInitializer(mean_image, img, sitk.Euler3DTransform(),\n",
+    "                                                   sitk.CenteredTransformInitializerFilter.GEOMETRY)\n",
+    "            registration_method.SetInitialTransform(tx, inPlace=False)\n",
+    "            registration_method.SetShrinkFactorsPerLevel([4, 2, 1])\n",
+    "            registration_method.SetSmoothingSigmasPerLevel([2, 1, 0])\n",
+    "\n",
+    "            final_tx = registration_method.Execute(mean_image, img)\n",
+    "            transforms.append(final_tx)\n",
+    "\n",
+    "        # Step 2: Compute the average transformation\n",
+    "        avg_transform = average_rigid_transforms(transforms)\n",
+    "\n",
+    "        # Step 3: Apply inverse average transform to current mean to shift to unbiased space\n",
+    "        inv_avg_transform = avg_transform.GetInverse()\n",
+    "        mean_image = sitk.Resample(mean_image, mean_image, inv_avg_transform,\n",
+    "                                   sitk.sitkLinear, 0.0, mean_image.GetPixelID())\n",
+    "\n",
+    "        # Step 4: Resample all images to the new mean space and recompute mean image\n",
+    "        registered_images = []\n",
+    "        for img, tx in zip(images, transforms):\n",
+    "            total_tx = sitk.Transform(avg_transform)\n",
+    "            total_tx.AddTransform(tx)\n",
+    "            resampled = sitk.Resample(img, mean_image, total_tx, sitk.sitkLinear, 0.0, img.GetPixelID())\n",
+    "            registered_images.append(resampled)\n",
+    "\n",
+    "        # Recompute mean image\n",
+    "        #mean_image = sitk.Mean(registered_images)\n",
+    "\n",
+    "    return registered_images\n",
+    "\n",
+    "\n",
+    "def average_rigid_transforms(transforms):\n",
+    "    \"\"\"\n",
+    "    Compute the average rigid transformation from a list of Euler3DTransforms.\n",
+    "    Averages rotation angles and translations independently.\n",
+    "\n",
+    "    Parameters:\n",
+    "        transforms (list of sitk.Euler3DTransform): List of transforms.\n",
+    "\n",
+    "    Returns:\n",
+    "        sitk.Euler3DTransform: Averaged rigid transform.\n",
+    "    \"\"\"\n",
+    "    angles = np.zeros(3)\n",
+    "    translations = np.zeros(3)\n",
+    "    center = np.zeros(3)\n",
+    "\n",
+    "    for tx in transforms:\n",
+    "        tx = sitk.Euler3DTransform(tx)\n",
+    "        angles += np.array(tx.GetRotation())  # angles in radians\n",
+    "        translations += np.array(tx.GetTranslation())\n",
+    "        center += np.array(tx.GetCenter())\n",
+    "\n",
+    "    n = len(transforms)\n",
+    "    angles /= n\n",
+    "    translations /= n\n",
+    "    center /= n\n",
+    "\n",
+    "    avg_tx = sitk.Euler3DTransform()\n",
+    "    avg_tx.SetRotation(*angles)\n",
+    "    avg_tx.SetTranslation(translations.tolist())\n",
+    "    avg_tx.SetCenter(center.tolist())\n",
+    "\n",
+    "    return avg_tx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cfc5fd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#aligned_volumes, final_average = groupwise_register_and_align()\n",
+    "structure = 'PBG_L'\n",
+    "structure = 'SC'\n",
+    "aligned_volumes, final_average = load_volumes(structure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "151699c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "registered = build_unbiased_atlas(aligned_volumes, num_iterations=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5489cdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_volume = np.mean([sitk.GetArrayFromImage(vol) for vol in aligned_volumes], axis=0)\n",
+    "print(avg_volume.dtype, avg_volume.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b6bf88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = avg_volume.copy()\n",
+    "z = arr.shape[2] // 2\n",
+    "volume = arr.copy()\n",
+    "#volume = adjust_volume(volume, 255)\n",
+    "slice = volume[:,:,z]\n",
+    "plt.imshow(slice, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2765f4c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volumes = []\n",
+    "\n",
+    "brains = ['MD585', 'MD589', 'MD594']\n",
+    "for brain in brains:\n",
+    "    structure_path = os.path.join(data_path, brain, 'structure', f'{structure}.npy')\n",
+    "    arr = np.load(structure_path)\n",
+    "    com = center_of_mass(arr)\n",
+    "    print(f'{brain} {arr.dtype} {arr.shape} {com}')\n",
+    "    volumes.append(arr)\n",
+    "\n",
+    "_, axs = plt.subplots(1, 3, figsize=(12, 12), sharex=True, sharey=True)\n",
+    "axs = axs.flatten()\n",
+    "for img, ax in zip(volumes, axs):\n",
+    "    z = img.shape[2] // 2\n",
+    "    slice = img[:,:,z].astype(np.uint8)\n",
+    "    ax.imshow(slice, cmap=\"gray\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -160,27 +430,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure = 'SC'\n",
     "animal = 'AtlasV8'\n",
     "structure_path = os.path.join(data_path, animal, 'structure', f'{structure}.npy')\n",
     "arr = np.load(structure_path)\n",
     "ids, counts = np.unique(arr, return_counts=True)\n",
-    "print(ids)\n",
-    "print(counts)\n",
+    "if len(ids) < 10:\n",
+    "    print(ids)\n",
+    "    print(counts)\n",
     "print(arr.shape, arr.dtype, np.mean(arr), np.min(arr), np.max(arr))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a38c856b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "volume = arr.copy()\n",
-    "volume = volume * 255\n",
-    "volume = volume.astype(np.uint8)\n",
-    "print(volume.shape, volume.dtype, np.mean(volume), np.min(volume), np.max(volume))"
    ]
   },
   {
@@ -193,9 +450,32 @@
     "z = arr.shape[2] // 2\n",
     "volume = arr.copy()\n",
     "#volume = adjust_volume(volume, 255)\n",
+    "#slice = volume[:,:,z].astype(np.uint32)\n",
+    "slice = volume[:,:,z]\n",
+    "plt.imshow(slice, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d76c6c9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = arr.shape[2] // 2\n",
+    "volume = arr.copy()\n",
+    "volume = adjust_volume(volume, 255)\n",
     "slice = volume[:,:,z].astype(np.uint32)\n",
     "plt.imshow(slice, cmap='gray')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468c2820",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
