--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -106,10 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37\n"
+     ]
+    }
+   ],
    "source": [
     "moving_name = 'AtlasV8'\n",
     "fixed_name = 'Allen'\n",
@@ -128,26 +144,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "edccf6f0",
+   "execution_count": 8,
+   "id": "30a0a314",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11287.  6334.  2911.]\n",
+      "[9464. 5176. 3890.]\n"
+     ]
+    }
+   ],
    "source": [
-    "from scipy.io import loadmat\n",
-    "reg_path = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration'\n",
-    "transform_file = 'MD594_Allen_10.0x10.0x10.0um_Affine_inverse.mat'\n",
-    "transform_path = os.path.join(reg_path, moving_name, transform_file)\n",
-    "transform = sitk.ReadTransform(transform_path)\n",
-    "transform = sitk.AffineTransform(transform)\n",
-    "print(transform)"
+    "print(np.round(moving_src[0]))\n",
+    "print(np.round(fixed_src[0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68804c17",
+   "id": "5607a9d9",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Convert to lists of sitk.Point\n",
+    "fixed_points_list = [tuple(np.round(p)) for p in fixed_src]\n",
+    "moving_points_list = [tuple(p) for p in moving_src]\n",
+    "print(fixed_points_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "287488b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "landmark_initializer = sitk.LandmarkBasedTransformInitializerFilter()\n",
+    "\n",
+    "landmark_initializer.SetFixedLandmarks(fixed_points_list)\n",
+    "landmark_initializer.SetMovingLandmarks(moving_points_list)\n",
+    "\n",
+    "\n",
+    "# Create an AffineTransform (3D)\n",
+    "affine_transform = sitk.AffineTransform(3)\n",
+    "\n",
+    "# Use SimpleITK's LandmarkBasedTransformInitializer\n",
+    "affine_transform = sitk.LandmarkBasedTransformInitializer(\n",
+    "    transform=affine_transform,\n",
+    "    fixedLandmarks=fixed_points_list,\n",
+    "    movingLandmarks=moving_points_list\n",
+    ")\n",
+    "\n",
+    "# Get matrix and translation\n",
+    "matrix = np.array(affine_transform.GetMatrix()).reshape((3,3))\n",
+    "translation = np.array(affine_transform.GetTranslation())\n",
+    "\n",
+    "print(\"Affine Transformation Matrix:\\n\", matrix)\n",
+    "print(\"Translation Vector:\\n\", translation)\n",
+    "\n",
+    "# Optional: Apply transform to a point\n",
+    "test_point = (0.5, 0.5, 0.5)\n",
+    "transformed_point = affine_transform.TransformPoint(test_point)\n",
+    "print(\"Transformed point:\", transformed_point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "68804c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9.77752704e-01 -3.45818301e-02  1.38903433e-02 -1.45768086e+03]\n",
+      " [ 1.23304368e-01  1.25030522e+00  8.97779129e-02 -4.44177104e+03]\n",
+      " [ 4.07969856e-03  1.16806694e-02  1.13418445e+00  5.14477914e+02]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "#transformation_matrix = get_affine_transformation(moving_name=moving_name, fixed_name=fixed_name, \n",
     "#                                                  scaling_factor=1)\n",
@@ -157,10 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8860c495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMS: 255.06442287466515 observations: 37\n"
+     ]
+    }
+   ],
    "source": [
     "df_list = []\n",
     "error = []\n",
@@ -187,10 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4e7b269b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AtlasV8 SC non trans [10914.  3952.  4502.]\n",
+      "AtlasV8 SC apply trans [9139. 2250. 5711.]\n",
+      "Allen SC [9140. 2388. 5692.]\n",
+      "AtlasV8->Allen SC [  -1.5301106  -138.32410135   18.27721214]\n"
+     ]
+    }
+   ],
    "source": [
     "#transformation_matrix = np.hstack([transformation_matrix, t])\n",
     "#transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
@@ -208,7 +307,7 @@
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure/1)}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
     "diff = transformed_structure - fixed_all[structure]\n",
-    "print(f'{moving_name}->{fixed_name} {structure} {np.round(diff)}')"
+    "print(f'{moving_name}->{fixed_name} {structure} {diff}')"
    ]
   },
   {
