Updated create atlas

--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -17,9 +17,7 @@
     "from scipy.spatial import procrustes\n",
     "from scipy.spatial.transform import Rotation as R\n",
     "import cv2\n",
-    "\n",
     "import SimpleITK as sitk\n",
-    "\n",
     "import ipywidgets\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
@@ -54,7 +52,7 @@
     "print(PIPELINE_ROOT)\n",
     "\n",
     "data_path = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data'\n",
-    "from library.atlas.atlas_utilities import register_volume, adjust_volume, affine_transform_volume, \\\n",
+    "from library.atlas.atlas_utilities import register_volume, adjust_volume, \\\n",
     "    affine_transform_point, resample_image"
    ]
   },
@@ -249,7 +247,7 @@
     "    resampled_images = center_images_to_largest_volume(resampled_images)\n",
     "    resampled_images = align_images_to_common_center(resampled_images)\n",
     "    \n",
-    "    return resampled_images, reference_image\n",
+    "    return resampled_images\n",
     "        #return [sitk.ReadImage(p, sitk.sitkFloat32) for p in volume_paths]\n",
     "\n",
     "def get_image_center(image):\n",
@@ -297,7 +295,57 @@
     "        aligned_images.append(resampled)\n",
     "    \n",
     "    return aligned_images\n",
-    "\n"
+    "\n",
+    "def affine_transform_volume(volume: np.ndarray, matrix: np.ndarray) -> np.ndarray:\n",
+    "    \"\"\"Apply an affine transformation to a 3D volume.\"\"\"\n",
+    "    if matrix.shape != (4, 4):\n",
+    "        raise ValueError(\"Matrix must be a 4x4 numpy array\")\n",
+    "        \n",
+    "    R = matrix[:3, :3]\n",
+    "    scale = np.linalg.norm(R, axis=0)\n",
+    "\n",
+    "    # Create a new 4x4 matrix with only the scale\n",
+    "    scale_only = np.eye(4)\n",
+    "    scale_only[0, 0] = scale[0]\n",
+    "    scale_only[1, 1] = scale[1]\n",
+    "    scale_only[2, 2] = scale[2]        \n",
+    "        \n",
+    "    #translation = (matrix[..., 3][0:3])\n",
+    "    translation = 0\n",
+    "    transformed_volume = affine_transform(volume, R, offset=translation, order=1)\n",
+    "    return transformed_volume\n",
+    "\n",
+    "def convert_euler(animal):\n",
+    "    params = {}\n",
+    "    center = {}\n",
+    "    params['MD585'] = [1.086267, 0.087124, 0.020623, -0.096527, 1.236928, -0.012186, 0.028797, -0.002925, 1.170771, -156.715823, -7.243461, 121.092594]\n",
+    "    params['MD589'] = [1.084250, 0.155819, 0.014409, -0.321239, 1.221062, 0.078012, -0.012610, -0.041006, 1.133703, -196.347565, -134.130296, 114.142506]\n",
+    "    params['MD594'] = [0.979148, -0.176800, 0.091638, 0.198827, 1.155553, 0.007687, -0.071885, 0.002762, 1.132444, -271.150036, -140.324929, 133.109973]\n",
+    "\n",
+    "    center['MD585'] = np.array([862.5, 632.5, 445.50])\n",
+    "    center['MD589'] = np.array([987.5, 732.0, 446.50])\n",
+    "    center['MD594'] = np.array([1062.0, 526.0, 432.5])\n",
+    "\n",
+    "    if animal not in params:\n",
+    "        print(f'Error {animal} not in params')\n",
+    "        return np.eye(4)\n",
+    "\n",
+    "    t = np.array(params[animal][9:])\n",
+    "    R = np.array(params[animal][:9]).reshape(3,3)\n",
+    "    affine = np.eye(4)\n",
+    "    affine[:3,:3] = R\n",
+    "    affine[:3,3] = t\n",
+    "    return affine\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14e8fd2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure = 'SC'"
    ]
   },
   {
@@ -308,9 +356,7 @@
    "outputs": [],
    "source": [
     "#aligned_volumes, final_average = groupwise_register_and_align()\n",
-    "structure = '10N_R'\n",
-    "structure = 'SC'\n",
-    "aligned_volumes, final_average = load_volumes(structure)"
+    "aligned_volumes = load_volumes(structure)"
    ]
   },
   {
@@ -331,12 +377,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "allen_id = 255\n",
     "arr = avg_volume.copy()\n",
-    "z = arr.shape[2] // 2\n",
+    "z = arr.shape[1] // 2\n",
     "print('midpoint=',z)\n",
     "volume = arr.copy()\n",
-    "volume = adjust_volume(volume, 255)\n",
-    "slice = volume[:,:,z]\n",
+    "#volume = adjust_volume(volume, 255)\n",
+    "volume = gaussian(volume, 4.0)            \n",
+    "upper = np.quantile(volume, 0.8)\n",
+    "print('upper', upper)\n",
+    "upper = 100\n",
+    "print(np.mean(volume), np.min(volume), np.max(volume))\n",
+    "volume[(volume > upper) ] = allen_id\n",
+    "volume[(volume != allen_id)] = 0\n",
+    "volume = volume.astype(np.uint32)\n",
+    "\n",
+    "slice = volume[:,z,:]\n",
     "plt.imshow(slice, cmap='gray')"
    ]
   },
@@ -350,14 +406,44 @@
    "outputs": [],
    "source": [
     "volumes = []\n",
-    "\n",
     "brains = ['MD585', 'MD589', 'MD594']\n",
     "for brain in brains:\n",
     "    structure_path = os.path.join(data_path, brain, 'structure', f'{structure}.npy')\n",
     "    arr = np.load(structure_path)\n",
+    "    #affine = convert_euler(brain)\n",
+    "    #arr = affine_transform_volume(arr, affine)\n",
+    "    volumes.append(arr)\n",
+    "    com = center_of_mass(arr)\n",
+    "    print(f'{brain} {arr.dtype} {arr.shape} {np.round(com)}')\n",
+    "\n",
+    "\n",
+    "_, axs = plt.subplots(1, 3, figsize=(12, 12), sharex=True, sharey=True)\n",
+    "axs = axs.flatten()\n",
+    "for img, ax, brain in zip(volumes, axs, brains):\n",
+    "    z = img.shape[1] // 8\n",
+    "    slice = img[:,z,:].astype(np.uint8)\n",
+    "    ax.set_title(brain)\n",
+    "    ax.set_xlim(0, 400)\n",
+    "    ax.set_ylim(0, 250)\n",
+    "    ax.imshow(slice, cmap=\"gray\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ae31c58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volumes = []\n",
+    "brains = ['MD585', 'MD589', 'MD594']\n",
+    "for brain in brains:\n",
+    "    structure_path = os.path.join(data_path, brain, 'structure2allen', f'{structure}.npy')\n",
+    "    arr = np.load(structure_path)\n",
+    "    volumes.append(arr)\n",
     "    com = center_of_mass(arr)\n",
     "    print(f'{brain} {arr.dtype} {arr.shape} {com}')\n",
-    "    volumes.append(arr)\n",
     "\n",
     "_, axs = plt.subplots(1, 3, figsize=(12, 12), sharex=True, sharey=True)\n",
     "axs = axs.flatten()\n",
@@ -366,7 +452,7 @@
     "    slice = img[:,:,z].astype(np.uint8)\n",
     "    ax.set_title(brain)\n",
     "    ax.set_xlim(0, 200)\n",
-    "    ax.set_ylim(0,230)\n",
+    "    ax.set_ylim(0, 320)\n",
     "    ax.imshow(slice, cmap=\"gray\")\n",
     "plt.show()"
    ]
@@ -426,6 +512,7 @@
    "outputs": [],
    "source": [
     "animal = 'AtlasV8'\n",
+    "structure = 'SC'\n",
     "structure_path = os.path.join(data_path, animal, 'structure', f'{structure}.npy')\n",
     "arr = np.load(structure_path)\n",
     "ids, counts = np.unique(arr, return_counts=True)\n",
@@ -438,12 +525,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2ca9397f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allen_id = 200\n",
+    "volume = gaussian(arr, 4)\n",
+    "#volume = arr.copy()\n",
+    "upper = 100\n",
+    "\n",
+    "mean = np.mean(volume)\n",
+    "print(mean, np.min(volume), np.max(volume))\n",
+    "volume[(volume >= mean) ] = allen_id\n",
+    "volume[(volume < mean)] = 0\n",
+    "#volume = volume.astype(np.uint8)\n",
+    "#hist_data = arr[arr > 0]\n",
+    "plt.hist(volume.flatten(), bins=30, color='skyblue', alpha=0.7)\n",
+    "# Add labels and title\n",
+    "plt.xlabel('Value')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title(f'{structure} Histogram')\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d408e266",
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = arr.shape[2] // 2\n",
-    "volume = arr.copy()\n",
+    "print(volume.shape)\n",
+    "#print(avg.shape)\n",
+    "z = volume.shape[2] // 2\n",
     "#volume = adjust_volume(volume, 255)\n",
     "#slice = volume[:,:,z].astype(np.uint32)\n",
     "slice = volume[:,:,z]\n",
@@ -536,6 +651,7 @@
    },
    "outputs": [],
    "source": [
+    "volume = arr.copy()\n",
     "#transformed_volume = affine_transform_volume(volume, transformation_matrix)\n",
     "# Visualize original and transformed volumes\n",
     "visualize_slices(volume, title=\"Original Volume\")\n",
