Some more atlas tweaks

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -46,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -57,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -73,214 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sum_square_com(com):\n",
     "    ss = np.sqrt(sum([s**2 for s in com]))\n",
-    "    return ss\n",
-    "\n",
-    "# ---------- Utilities ----------\n",
-    "def _to_homogeneous(P):\n",
-    "    \"\"\"(N,3) -> (N,4) homogeneous coordinates\"\"\"\n",
-    "    return np.hstack([P, np.ones((P.shape[0], 1), dtype=P.dtype)])\n",
-    "\n",
-    "def apply_transform(P, T):\n",
-    "    \"\"\"\n",
-    "    Apply 4x4 transform T to Nx3 array P.\n",
-    "    Returns transformed Nx3 array.\n",
-    "    \"\"\"\n",
-    "    Ph = _to_homogeneous(P)  # (N,4)\n",
-    "    Qh = Ph @ T.T            # (N,4)\n",
-    "    return Qh[:, :3] / Qh[:, 3:4]\n",
-    "\n",
-    "# ---------- Rigid (Kabsch) ----------\n",
-    "def fit_rigid(A, B, weights=None, allow_reflection=False):\n",
-    "    \"\"\"\n",
-    "    Best-fit rigid transform from A -> B (both Nx3).\n",
-    "    Returns 4x4 transform matrix T such that B ≈ apply_transform(A, T).\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    A, B : (N,3)\n",
-    "        Corresponding points (same ordering).\n",
-    "    weights : (N,) or None\n",
-    "        Optional non-negative weights per correspondence.\n",
-    "    allow_reflection : bool\n",
-    "        If False (default), forbids reflections (det(R)=+1).\n",
-    "    \"\"\"\n",
-    "    A = np.asarray(A, dtype=np.float64)\n",
-    "    B = np.asarray(B, dtype=np.float64)\n",
-    "    assert A.shape == B.shape and A.shape[1] == 3\n",
-    "\n",
-    "    if weights is None:\n",
-    "        w = np.ones(A.shape[0], dtype=np.float64)\n",
-    "    else:\n",
-    "        w = np.asarray(weights, dtype=np.float64)\n",
-    "        assert w.shape == (A.shape[0],)\n",
-    "        w = np.clip(w, 0, np.inf)\n",
-    "\n",
-    "    W = w / (np.sum(w) + 1e-15)\n",
-    "    muA = np.sum(A * W[:, None], axis=0)\n",
-    "    muB = np.sum(B * W[:, None], axis=0)\n",
-    "\n",
-    "    A0 = A - muA\n",
-    "    B0 = B - muB\n",
-    "\n",
-    "    # Weighted covariance\n",
-    "    H = (A0 * W[:, None]).T @ B0  # 3x3\n",
-    "\n",
-    "    U, S, Vt = np.linalg.svd(H)\n",
-    "    R = Vt.T @ U.T\n",
-    "\n",
-    "    # Enforce proper rotation (det=+1) unless reflections are allowed\n",
-    "    if not allow_reflection and np.linalg.det(R) < 0:\n",
-    "        Vt[-1, :] *= -1\n",
-    "        R = Vt.T @ U.T\n",
-    "\n",
-    "    t = muB - R @ muA\n",
-    "\n",
-    "    T = np.eye(4)\n",
-    "    T[:3, :3] = R\n",
-    "    T[:3, 3] = t\n",
-    "    return T\n",
-    "\n",
-    "# ---------- Similarity (Umeyama) ----------\n",
-    "def fit_similarity(A, B, allow_reflection=False):\n",
-    "    \"\"\"\n",
-    "    Best-fit similarity (scale * rotation + translation) using Umeyama.\n",
-    "    Returns 4x4 transform with uniform scale baked into the linear part.\n",
-    "    \"\"\"\n",
-    "    A = np.asarray(A, dtype=np.float64)\n",
-    "    B = np.asarray(B, dtype=np.float64)\n",
-    "    assert A.shape == B.shape and A.shape[1] == 3\n",
-    "\n",
-    "    muA = A.mean(axis=0)\n",
-    "    muB = B.mean(axis=0)\n",
-    "    A0 = A - muA\n",
-    "    B0 = B - muB\n",
-    "\n",
-    "    C = (A0.T @ B0) / A.shape[0]\n",
-    "    U, D, Vt = np.linalg.svd(C)\n",
-    "    S = np.eye(3)\n",
-    "\n",
-    "    if not allow_reflection and np.linalg.det(U @ Vt) < 0:\n",
-    "        S[-1, -1] = -1\n",
-    "\n",
-    "    R = U @ S @ Vt\n",
-    "    varA = np.mean(np.sum(A0**2, axis=1))\n",
-    "    scale = (np.sum(D * np.diag(S)) / (varA + 1e-15))\n",
-    "\n",
-    "    t = muB - scale * (R @ muA)\n",
-    "\n",
-    "    T = np.eye(4)\n",
-    "    T[:3, :3] = scale * R\n",
-    "    T[:3, 3] = t\n",
-    "    return T, scale\n",
-    "\n",
-    "# ---------- Affine (12-DoF) ----------\n",
-    "def fit_affine(A, B):\n",
-    "    \"\"\"\n",
-    "    Best-fit full affine transform A->B using linear least squares.\n",
-    "    Solves for 3x4 matrix [M|t] such that B ≈ A*M^T + t.\n",
-    "    Returns a 4x4 matrix T.\n",
-    "    \"\"\"\n",
-    "    A = np.asarray(A, dtype=np.float64)\n",
-    "    B = np.asarray(B, dtype=np.float64)\n",
-    "    assert A.shape == B.shape and A.shape[1] == 3\n",
-    "\n",
-    "    N = A.shape[0]\n",
-    "    Ah = _to_homogeneous(A)           # (N,4)\n",
-    "    # Solve Ah @ X^T ≈ B, where X is 3x4\n",
-    "    X, *_ = np.linalg.lstsq(Ah, B, rcond=None)  # X is (4,3)\n",
-    "    X = X.T                                   # (3,4)\n",
-    "\n",
-    "    T = np.eye(4)\n",
-    "    T[:3, :4] = X\n",
-    "    return T\n",
-    "\n",
-    "# ---------- RANSAC wrapper (optional) ----------\n",
-    "def ransac_fit(A, B, model='rigid', thresh=1.0, max_trials=1000, min_inliers=3, random_state=None):\n",
-    "    \"\"\"\n",
-    "    Robustly estimate transform with RANSAC to handle outliers.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    model : 'rigid' | 'similarity' | 'affine'\n",
-    "    thresh : float\n",
-    "        Inlier distance threshold in target space units.\n",
-    "    max_trials : int\n",
-    "    min_inliers : int\n",
-    "        Minimum inliers to accept a model.\n",
-    "    \"\"\"\n",
-    "    rng = np.random.default_rng(random_state)\n",
-    "    A = np.asarray(A, dtype=np.float64)\n",
-    "    B = np.asarray(B, dtype=np.float64)\n",
-    "    assert A.shape == B.shape and A.shape[1] == 3\n",
-    "\n",
-    "    if model == 'rigid' or model == 'similarity':\n",
-    "        sample_size = 3  # 3 non-collinear pairs\n",
-    "    elif model == 'affine':\n",
-    "        sample_size = 4  # 4 points for 12 params (overdetermined)\n",
-    "    else:\n",
-    "        raise ValueError(\"model must be 'rigid', 'similarity', or 'affine'\")\n",
-    "\n",
-    "    N = A.shape[0]\n",
-    "    best_T, best_inliers = None, np.array([], dtype=bool)\n",
-    "\n",
-    "    for _ in range(max_trials):\n",
-    "        idx = rng.choice(N, size=sample_size, replace=False)\n",
-    "        A_s, B_s = A[idx], B[idx]\n",
-    "\n",
-    "        try:\n",
-    "            if model == 'rigid':\n",
-    "                T = fit_rigid(A_s, B_s)\n",
-    "            elif model == 'similarity':\n",
-    "                T, _ = fit_similarity(A_s, B_s)\n",
-    "            else:  # affine\n",
-    "                T = fit_affine(A_s, B_s)\n",
-    "        except np.linalg.LinAlgError:\n",
-    "            continue\n",
-    "\n",
-    "        B_pred = apply_transform(A, T)\n",
-    "        errs = np.linalg.norm(B - B_pred, axis=1)\n",
-    "        inliers = errs <= thresh\n",
-    "\n",
-    "        if inliers.sum() > best_inliers.sum():\n",
-    "            best_inliers = inliers\n",
-    "            # Refit on all inliers for a refined model\n",
-    "            if inliers.sum() >= min_inliers:\n",
-    "                if model == 'rigid':\n",
-    "                    T = fit_rigid(A[inliers], B[inliers])\n",
-    "                elif model == 'similarity':\n",
-    "                    T, _ = fit_similarity(A[inliers], B[inliers])\n",
-    "                else:\n",
-    "                    T = fit_affine(A[inliers], B[inliers])\n",
-    "                best_T = T\n",
-    "\n",
-    "    if best_T is None:\n",
-    "        raise RuntimeError(\"RANSAC failed to find a valid model. \"\n",
-    "                           \"Try increasing max_trials or thresh.\")\n",
-    "\n",
-    "    return best_T, best_inliers\n"
+    "    return ss\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "moving_name = 'AtlasV8'\n",
     "fixed_name = 'Allen'\n",
@@ -291,7 +91,7 @@
     "#bad_keys = ('RtTg',)\n",
     "#bad_keys = ()\n",
     "good_keys = set(common_keys) - set(bad_keys)\n",
-    "good_keys = ['SC', 'IC']\n",
+    "#good_keys = ['SC', 'IC']\n",
     "\n",
     "moving_src = np.array([moving_all[s] for s in good_keys])\n",
     "fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
@@ -300,19 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c278bf48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10949.  3924.  5199.]\n",
-      "[9140. 2388. 5692.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(np.round(moving_src[0]))\n",
     "print(np.round(fixed_src[0]))"
@@ -320,21 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "68804c17",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.08693395e+00 -3.08554504e-01 -2.98168012e-01 -4.79588311e-05]\n",
-      " [-2.64341116e-02  2.68837747e-01  3.12088859e-01  5.62837284e-05]\n",
-      " [ 4.20139649e-02  5.22616466e-01  6.12002297e-01  1.10885657e-04]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#transformation_matrix = get_affine_transformation(moving_name=moving_name, fixed_name=fixed_name, \n",
     "#                                                  scaling_factor=1)\n",
@@ -344,18 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8860c495",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMS: 2671.6313473166147 observations: 37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_list = []\n",
     "error = []\n",
@@ -392,13 +164,13 @@
     "#print(transformation_matrix)\n",
     "structure = 'SC'\n",
     "try:\n",
-    "    com = np.array(moving_all[structure]).reshape(1,3)\n",
+    "    com = moving_all[structure]\n",
     "except KeyError:\n",
     "    structure = common_keys[0]\n",
-    "    com = np.array(moving_all[structure]).reshape(1,3)\n",
+    "    com = moving_all[structure]\n",
     "#com = [1095, 392, 519]\n",
     "print(f'{moving_name} {structure} non trans {np.round(np.array(com))}')\n",
-    "transformed_structure = apply_transform(com, transformation_matrix)\n",
+    "transformed_structure = affine_transform_point(com, transformation_matrix)\n",
     "\n",
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure/1)}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
