Cleaning up atlas code

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moving_name = 'AtlasV8'\n",
+    "moving_name = 'MD594'\n",
     "fixed_name = 'Allen'\n",
     "moving_all = list_coms(moving_name, scaling_factor=1)\n",
     "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
@@ -92,7 +92,7 @@
     "#bad_keys = ()\n",
     "good_keys = set(common_keys) - set(bad_keys)\n",
     "#good_keys = ['SC', 'IC']\n",
-    "\n",
+    "#good_keys = common_keys\n",
     "moving_src = np.array([moving_all[s] for s in good_keys])\n",
     "fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
     "print(len(common_keys))"
@@ -149,7 +149,10 @@
     "# MD585 to Allen RMS 263.314352291951\n",
     "# MD594 to Allen RMS 250.79820210419254\n",
     "# AtlasV8 DB to Allen RMS 238.5831606646421\n",
-    "# MD585 to MD589 RMS 18.2658167690059"
+    "# MD585 to MD594 152.06606097021333 observations: 51\n",
+    "# MD585 to Allen 263.31435 observations: 37\n",
+    "# MD589 to Allen 260.02 observations: 37\n",
+    "# MD594 to Allen 250.79 observations: 37"
    ]
   },
   {
